--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mushrooms</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/bpd3fkb.css">
-    <script defer src="script.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <header>
@@ -16,35 +16,40 @@
 
 <body>
     <div class="main">
-        <div class=container id="red">
+        <div class=container id="super">
             <img src="super.webp">
             <h2>Super Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will grow bigger.</p>
         </div>
-        <div class=container>
+        <div class=container id="poison">
             <img src="poison.webp">
             <h2>Poison Mushroom</h2>
             <p>This is not edible. You will get sick! Please avoid eating this mushroom.</p>
         </div>
-        <div class=container>
+        <div class=container id="oneup">
             <img src="1-up.webp">
             <h2>1-Up Mushroom</h2>
             <p>This is edible. You can eat this! When consumed, you can die one time for free!</p>
         </div>
-        <div class=container>
+        <div class=container id="mini">
             <img src="mini.webp">
             <h2>Mini Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become really small.</p>
         </div>
-        <div class=container>
+        <div class=container id="spring">
             <img src="spring.webp">
             <h2>Spring Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become a spring.</p>
         </div>
-        <div class=container>
+        <div class=container id="boo">
             <img src="boo.webp">
             <h2>Boo Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become a ghost.</p>
+        </div>
+        <div class=container id="star">
+            <img src="star.webp">
+            <h2>Super Star</h2>
+            <p>This is edible(?). You will become invinsible! Lets GOOOO!!!</p>
         </div>
     </div>
 </body>
