--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
 <body>
     <div class="main">
         <div class=container id="super">
-            <img src="super.webp">
+            <img src="super.webp" alt="a red mushroom with white polka dots">
             <h2>Super Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will grow bigger.</p>
         </div>
         <div class=container id="poison">
-            <img src="poison.webp">
+            <img src="poison.webp" alt="a purple mushroom with pink polka dots">
             <h2>Poison Mushroom</h2>
             <p>This is not edible. You will get sick! Please avoid eating this mushroom.</p>
         </div>
         <div class=container id="oneup">
-            <img src="1-up.webp">
+            <img src="1-up.webp" alt="a green mushroom with white polka dots">
             <h2>1-Up Mushroom</h2>
             <p>This is edible. You can eat this! When consumed, you can die one time for free!</p>
         </div>
         <div class=container id="mini">
-            <img src="mini.webp">
+            <img src="mini.webp" alt="a blue mushroom with white polka dots">
             <h2>Mini Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become really small.</p>
         </div>
         <div class=container id="spring">
-            <img src="spring.webp">
+            <img src="spring.webp" alt="a silver mushroom in a shape of a spring">
             <h2>Spring Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become a spring.</p>
         </div>
         <div class=container id="boo">
-            <img src="boo.webp">
+            <img src="boo.webp" alt="a white mushroom in a shape of a ghost">
             <h2>Boo Mushroom</h2>
             <p>This is edible. You can eat this! However, as a side effect, you will become a ghost.</p>
         </div>
         <div class=container id="star">
-            <img src="star.webp">
+            <img src="star.webp" alt="a yellow star with five points">
             <h2>Super Star</h2>
             <p>This is edible(?). You will become invinsible! Lets GOOOO!!!</p>
         </div>
